<package format="3">
  <name>stereo</name>
  <version>0.0.1</version>
  <description>The stereo package</description>
  <maintainer email="user@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>Python3</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>ament_python</build_depend> <!-- To manage Python scripts and dependencies -->

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>Python3</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>ultralytics</exec_depend> <!-- YOLO dependency -->
  <exec_depend>pillow</exec_depend> <!-- PIL for image processing -->

  <!-- Group membership -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>


